refactor: transaction/user_service_rate 테이블 userId → userSeq 마이그레이션
- Entity: userId(String) → userSeq(Integer) 필드 변경
- Mapper: user_id → user_seq 컬럼 변경, FK 제약조건 추가
- Service: API 호환용 userId 오버로드 메서드 추가 (toUserSeq 변환)
  - BalanceService, BillingService, WalletService
- Controller: user-rates API userSeq 기반으로 변경
- DTO: userSeq 기반으로 변경, @NotNull validation 추가